# django_filtered_relation_coalesce_repro

./: pyproject.toml  settings.py
django_filtered_relation_coalesce_repro/: app_config.py  models.py
django_filtered_relation_coalesce_repro/migrations/: 0001_initial.py
django_filtered_relation_coalesce_repro/test/: test_job_manager.py
scripts/: init_db.sql
